Add jacoco and sonarqube settings